Permission browser example: Use QLatin1StringView

Removes ambiguous conversion of string types.

Fixes: QTBUG-127544
Pick-to: 6.8
Change-Id: I53d444b641c4b5190c1e391d9df21ccd7076ef13
Reviewed-by: Anu Aliyas <anu.aliyas@qt.io>